diesel_compile_tests/tests/fail/derive/bad_treat_none_as_null.stderr
error: expected `=`
  --> tests/fail/derive/bad_treat_none_as_null.rs:13:28
   |
13 | #[diesel(treat_none_as_null("true"))]
   |                            ^

error: unexpected end of input, expected `=`
       help: The correct format looks like `#[diesel(treat_none_as_null = true)]`
  --> tests/fail/derive/bad_treat_none_as_null.rs:21:28
   |
21 | #[diesel(treat_none_as_null)]
   |                            ^

error: expected boolean literal
  --> tests/fail/derive/bad_treat_none_as_null.rs:29:31
   |
29 | #[diesel(treat_none_as_null = "foo")]
   |                               ^^^^^

error: expected `treat_none_as_null` field to be of type `Option<_>`
  --> tests/fail/derive/bad_treat_none_as_null.rs:40:11
   |
40 |     name: String,
   |           ^^^^^^
